# devops-dashboard

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/devops_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
