[project]
name = "devops-dashboard"
version = "0.1.0"
description = "Devops Monitoring Dashboard API"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "alembic>=1.13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # All errors
    "F",  # All formatting issues
    "W",  # All warnings
    "C90",  # Complexity issues
    "B",  # Bug patterns,
    "I",  # Import issues,
    "UP", # Unused imports,
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"